--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_CLIENT =
-SECRET =
-NEXT_PUBLIC_API =
+NEXT_PUBLIC_CLIENT = SB-Mid-client-A5b_cRTAShiLiQqh
+NEXT_PUBLIC_SECRET = SB-Mid-server-vVBs4DwU4H4Drajcyp2lJdqU
+NEXT_PUBLIC_API = https://api.sandbox.midtrans.com
